# practicalworks-VadimLabotsky

./: .gitignore  README.md  laboratorywork1  main
Fraction/: bazel-testlogs
laboratory-task-1/: Laboratory work1.cpp  LaboratoryWork№1.cpp  main.cpp
laboratory-task-13-1/: WORKSPACE
laboratory-task-13-2/: .bazelrc
laboratory-task-14-2/: .baselrc  MODULE.bazel
laboratory-task-14-2/src/Student/: BUILD  Student.cpp
laboratory-task-14-2/src/StudentAfterFirstSession/: BUILD  StudentAfterFirstSession.hpp
laboratory-task-14-2/src/StudentAfterSecondSession/: BUILD
laboratory-task-14-2/src/class/Student/: Student.hpp
laboratory-task-14-2/src/class/StudentAfterFirstSession/: BUILD  StudentAfterFirstSession.cpp  StudentAfterFirstSession.hpp
laboratory-task-14-2/src/class/StudentAfterSecondSession/: BUILD  StudentAfterSecondSession.cpp  StudentAfterSecondSession.hpp
laboratory-task-14-2/src/main/: BUILD  main.cpp
laboratory-task-14-2/src/student/: BUILD  Student.cpp  Student.hpp  StudentAfterFirstSession.cpp  StudentAfterFirstSession.hpp  StudentAfterSecondSession.cpp  StudentAfterSecondSession.hpp
laboratory-task-14-2/src/tests/: BUILD  StudentTest.cpp  Test.cpp
laboratory-task-2/: Laboratory work 2.1.cpp  Laboratory work 2.2.cpp  Laboratory work 2.3.cpp  Laboratory_work_2.3.cpp  main_18.cpp  main_2.cpp  main_5.cpp
laboratory-task-3/: LaboratoryWork3.cpp  Laboratory_work_3.cpp  main.cpp
laboratory-task-4/: LabotaryWork4.cpp  Labotary_work_4.cpp  main.cpp
laboratory-task-5/: LabotaryWork5.cpp  main.cpp
laboratory-task-7/: LaboratoryWorK7.cpp  (+2 more)
(+190 files in other folders)
